# GcsCore

./: CMakeLists.txt  GcsCore.sln  README.md
GcsCore/: GcsCore.vcxproj  GcsCore.vcxproj.filters  packages.config
GcsCore/include/common/: config.h  event.h
GcsCore/include/data/: telemetry.h
GcsCore/include/interfaces/: i_converter.h  i_packet.h  i_parser.h  packet_factory.h
GcsCore/include/logging/: binary_log_writer.h  log_player.h
GcsCore/include/transport/: serial_manager.h
GcsCore/src/: logging_internal.h
GcsCore/src/logging/: binary_log_writer.cpp  log_player.cpp
GcsCore/src/transport/: serial_manager.cpp
tests/: test_signal.cpp
